# mimium

./: .all-contributorsrc  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AST.hpp  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYRIGHT  Dockerfile  Doxyfile  PKGBUILD  PKGBUILD.template.txt  README.md  debuginfo.bc  debuginfo.ll  debuginfo1.s  debuginfo2.s  fnvalue.ll  main.cpp  mimium.code-workspace  parser.hpp  parser_old.cpp  s-exp.cpp  s-exp.hpp  tmptmp.ll  tmptmp.s
.github/: FUNDING.yml
cmake/: AddFlexBisonDeps.cmake  CPackAdditionalInstall.cmake  EnableCcache.cmake  FindLlvm.cmake  FindSndFile.cmake  FindSphinx.cmake  clang-cxx-dev-tools.cmake
design/: corefeature.mmm  design-proposal.ja.md  design-proposal.md
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
examples/: adsr.mmm  demo.mmm  demo_movie.mmm  (+4 more)
src/: AST.cpp  CMakeLists.txt  alphaconvert_visitor.cpp  alphaconvert_visitor.hpp  ast.cpp  ast.hpp  ast_definitions.hpp  audiodriver.cpp  audiodriver.hpp  builtin_fn_types.hpp  builtin_functions.cpp  builtin_functions.hpp  closure.cpp  closure.hpp  closure_convert.cpp  closure_convert.hpp  closureconvert_visitor.cpp  closureconvert_visitor.hpp  compiler.cpp  compiler.hpp  driver.cpp  driver.hpp  environment.cpp  environment.hpp  export.hpp  ffi.cpp  ffi.hpp  helper_functions.cpp  helper_functions.hpp  interpreter.cpp  interpreter.hpp  interpreter_visitor.cpp  interpreter_visitor.hpp  jit_engine.hpp  knormalize_visitor.cpp  knormalize_visitor.hpp  libmain.cpp  libmain.hpp  libmimium.cpp  libmimium.hpp  (+26 more)
src/basic/: CMakeLists.txt  abstractions.hpp  ast.cpp  ast.hpp  ast_lowering.cpp  ast_lowering.hpp  ast_new.cpp  ast_new.hpp  ast_to_string.cpp  ast_to_string.hpp  debuginfo.hpp  environment.hpp  error_def.hpp  filereader.cpp  filereader.hpp  helper_functions.cpp  helper_functions.hpp  mir.cpp  mir.hpp  mir_new.hpp  op_map.hpp  sexpr.hpp  type.cpp  type.hpp  type_new.hpp  variant_visitor_helper.hpp
src/compiler/: CMakeLists.txt  alphaconvert_visitor.cpp  alphaconvert_visitor.hpp  ast_loader.cpp  ast_loader.hpp  ast_loader_new.cpp  ast_loader_new.hpp  ast_lowering.cpp  ast_lowering.hpp  ast_to_string.hpp  closure_convert.cpp  closure_convert.hpp  collect_memoryobjs.cpp  collect_memoryobjs.hpp  compiler.cpp  compiler.hpp  driver.cpp  driver.hpp  ffi.cpp  ffi.hpp  knormalize_visitor.cpp  knormalize_visitor.hpp  llvmgenerator.cpp  llvmgenerator.hpp  mimium.l  mimium.yy  mirgenerator.cpp  mirgenerator.hpp  recursive_checker.cpp  recursive_checker.hpp  scanner.cpp  scanner.hpp  symbolrenamer.cpp  symbolrenamer.hpp  type_infer_visitor.cpp  type_infer_visitor.hpp  type_lowering.cpp  type_lowering.hpp
src/compiler/codegen/: CMakeLists.txt  codegen_visitor.cpp  codegen_visitor.hpp  llvm_header.hpp  llvmgenerator.cpp  llvmgenerator.hpp  typeconverter.cpp  typeconverter.hpp
src/frontend/: CMakeLists.txt  appoptions.hpp  cli.cpp  cli.hpp  errors.hpp  genericapp.cpp  genericapp.hpp
src/preprocessor/: CMakeLists.txt  filereader.cpp  filereader.hpp  preprocessor.cpp  preprocessor.hpp
src/runtime/: CMakeLists.txt  audiodriver.cpp  audiodriver.hpp  jit_engine.hpp  mididriver.cpp  mididriver.hpp  runtime.cpp  runtime.hpp  runtime_defs.hpp  scheduler.cpp  scheduler.hpp
src/runtime/JIT/: CMakeLists.txt  jit_engine.hpp  runtime_jit.cpp  runtime_jit.hpp
src/runtime/backend/: CMakeLists.txt  audiodriver.cpp  audiodriver.hpp
src/runtime/backend/rtaudio/: CMakeLists.txt  driver_rtaudio.cpp  driver_rtaudio.hpp  rtaudio.CMakeLists.txt
src/runtime/executionengine/: CMakeLists.txt  executionengine.hpp
src/runtime/executionengine/llvm/: CMakeLists.txt  llvm_jitengine.cpp  llvm_jitengine.hpp  mimium_llvm_orcjit.hpp
src/runtime/scheduler/: CMakeLists.txt  scheduler.cpp  scheduler.hpp
src/utils/: include_filesystem.hpp
test/: 0.newast_test.cpp  1.ast_to_string_test.cpp  2.parser_test.cpp  3.symbolrename_test.cpp  4.typeinfer_test.cpp  5.mirgen_test.cpp  6.cli_test.cpp  CMakeLists.txt  alphaconv_test.cpp  ast_lowering_test.cpp  ast_to_string_test.cpp  audiodriver_test.cpp  builtin_test.cpp  closureconvert_test.cpp  dsp_demo.mmm  dsptest.mmm  dsptest_closure.ll  dsptest_closure.mmm  fibonacchi.mmm  flex_bison_test.cpp  interpreter_test.cpp  knormalize_test.cpp  leak_suppression.txt  listdata.mmm  llvmgenerator_test.cpp  memo_delayimpl.mmm  mirgen_test.cpp  newast_test.cpp  parser_test.cpp  preprocessor_test.cpp  rtmidi_test.cpp  scheduler_test.cpp  stdin.txt  symbolrename_test.cpp  test_audioout.mmm  test_builtin.mmm  test_closure.mmm  test_closure2.mmm  test_closure3.mmm  test_emit_llvm.mmm  (+20 more)
test/fuzzing/: CMakeLists.txt  fuzz_dictionary.txt  fuzzing_compiler.cpp
test/mmm/: ast_complete.mmm  factorial.mmm  memo.mmm  memo_delayimpl.mmm  test_array.mmm  test_array_capture.mmm  test_array_tofun.mmm  test_arraylvar.mmm  test_arrayreturn.mmm  test_audioout.mmm  test_builtin.mmm  test_closure.mmm  test_closure2.mmm  test_closure3.mmm  test_closure4.mmm  test_comment.mmm  test_delay.mmm  test_fibonacchi.mmm  test_hof.mmm  test_if.mmm  test_if_nested.mmm  test_if_void.mmm  test_ifexpr.mmm  test_ifwithsinglefcallblock.mmm  test_include.mmm  test_libsndfile.mmm  test_localvar2.mmm  test_lpf.mmm  test_mem.mmm  test_midi.mmm  test_midilib.mmm  test_operators.mmm  test_pipelineop.mmm  test_regression.mmm  test_self.mmm  test_stereopan.mmm  test_structtype.mmm  test_symbolrename.mmm  test_tuple.mmm  test_tuple_capture.mmm  (+5 more)
test/mmm/parser/: array.mmm  ifexpr.mmm  ifstmt.mmm  lambda.mmm  lvar_type.mmm  number.mmm  operators.mmm  opprecedent.mmm  pipeline.mmm  self.mmm  struct.mmm  structaccess.mmm  tuple.mmm  tuplelvar.mmm  tupletype.mmm  typedecl.mmm
test/mmm/preprocessor/: include_answer.mmm  includee.mmm  includer.mmm
test/mmm/typeinference/: float_failure.mmm  float_infer.mmm  float_success.mmm  function.mmm  highorderfunction.mmm  occur_failure.mmm  recursivecall.mmm  self.mmm  string_infer.mmm
test/old/: builtin_test.cpp  closureconvert_test.cpp  flex_bison_test.cpp  knormalize_test.cpp
test/regression/: CMakeLists.txt  regression_test.cpp
(+8 files in other folders)
